# tesseract_nanobind

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  conftest.py  dependencies.repos  dependencies.rosinstall  mkdocs.yml  pyproject.toml  pyrightconfig.json  run_tests.sh
.github/workflows/: docs.yml  wheels-linux.yml  wheels-macos.yml  wheels-windows-pixi.yml  wheels-windows.yml  wheels.yml
docs/: KINEMATICS_PLUGIN_FACTORY_ISSUE.md  NANOBIND_ISSUES.md  QUICKSTART.md  STATUS_AND_ROADMAP.md  changes.md  index.md  requirements.txt
docs/api/: ifopt.md  index.md  planning.md  tesseract_collision.md  tesseract_command_language.md  tesseract_common.md  tesseract_environment.md  tesseract_geometry.md  tesseract_kinematics.md  tesseract_motion_planners.md  tesseract_motion_planners_descartes.md  tesseract_motion_planners_ompl.md  tesseract_motion_planners_simple.md  tesseract_motion_planners_trajopt.md  tesseract_scene_graph.md  tesseract_serialization.md  tesseract_task_composer.md  trajopt_ifopt.md  trajopt_sqp.md
docs/assets/: sample.ply
docs/developer/: index.md  migration.md  trajopt_ifopt_missing_constraints.md  windows-wheels.md
docs/examples/: basic.md  index.md  online-planning.md  planning.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/javascripts/: mathjax.js
docs/plans/: 2026-02-23-high-severity-review-fixes.md  2026-02-23-tesseract-0.34-upgrade-design.md  2026-02-23-tesseract-0.34-upgrade.md
docs/stylesheets/: extra.css
docs/user-guide/: collision.md  environment.md  kinematics.md  low-level-sqp.md  planning.md  serialization.md  task-composer.md  viewer.md
examples/: README.md  abb_irb2400_viewer.py  basic_cartesian_example.py  car_seat_example.py  chain_example.py  freespace_hybrid_example.py  freespace_ompl_example.py  geometry_showcase_example.py  glass_upright_example.py  online_planning_example.py  online_planning_sqp_example.py  pick_and_place_example.py  puzzle_piece_auxillary_axes_example.py  puzzle_piece_example.py  raster_example.py  reeds_shepp_example.py  scene_graph_example.py  shapes_viewer.py  shapes_viewer_ssl_webxr_headset.py  tesseract_collision_example.py  tesseract_kinematics_example.py  tesseract_material_mesh_viewer.py  tesseract_planning_example_composer.py  tesseract_planning_example_no_composer.py  twc_workcell_positioner_viewer.py
examples/lowlevel/: basic_cartesian_c_api_example.py  car_seat_c_api_example.py  freespace_ompl_c_api_example.py  glass_upright_c_api_example.py  pick_and_place_c_api_example.py  puzzle_piece_auxillary_axes_c_api_example.py  puzzle_piece_c_api_example.py  pythonic_c_api_example.py  scene_graph_c_api_example.py  tesseract_collision_c_api_example.py  tesseract_kinematics_c_api_example.py  tesseract_planning_composer_c_api_example.py  tesseract_planning_lowlevel_c_api_example.py  tesseract_planning_lowlevel_trajopt_ifopt_example.py
scripts/: README.md  build_docs.sh  build_tesseract_cpp.sh  build_wheel.sh  env.sh  generate_stubs.sh  nb_stubgen_wrapper.py  patch_upstream.py  run_benchmarks.sh  run_scaling_benchmarks.sh  run_tests.sh
src/: README.md  tesseract_nb.h
src/ompl/: __init__.py  base.cpp
src/tesseract/: __init__.py  tesseract_collision.cpp  tesseract_command_language.cpp  tesseract_common.cpp  tesseract_environment.cpp  tesseract_geometry.cpp  tesseract_kinematics.cpp  tesseract_motion_planners.cpp  tesseract_motion_planners_descartes.cpp  tesseract_motion_planners_ompl.cpp  tesseract_motion_planners_simple.cpp  tesseract_motion_planners_trajopt.cpp  tesseract_motion_planners_trajopt_ifopt.cpp  tesseract_scene_graph.cpp  tesseract_serialization.cpp  tesseract_srdf.cpp  tesseract_state_solver.cpp  tesseract_task_composer.cpp  tesseract_task_composer_planning.cpp  tesseract_time_parameterization.cpp  tesseract_urdf.cpp  trajopt_ifopt.cpp  trajopt_sqp.cpp
src/tesseract_collision/: tesseract_collision_bindings.cpp
src/tesseract_command_language/: tesseract_command_language_bindings.cpp
src/tesseract_common/: tesseract_common_bindings.cpp
src/tesseract_environment/: tesseract_environment_bindings.cpp
src/tesseract_geometry/: tesseract_geometry_bindings.cpp
src/tesseract_kinematics/: tesseract_kinematics_bindings.cpp
src/tesseract_motion_planners/: tesseract_motion_planners_bindings.cpp
src/tesseract_motion_planners_descartes/: tesseract_motion_planners_descartes_bindings.cpp
src/tesseract_motion_planners_ompl/: tesseract_motion_planners_ompl_bindings.cpp
src/tesseract_motion_planners_simple/: tesseract_motion_planners_simple_bindings.cpp
src/tesseract_motion_planners_trajopt/: tesseract_motion_planners_trajopt_bindings.cpp
src/tesseract_motion_planners_trajopt_ifopt/: tesseract_motion_planners_trajopt_ifopt_bindings.cpp
src/tesseract_robotics/: __init__.py
src/tesseract_robotics_viewer/: __init__.py  tesseract_env_to_gltf.py  tesseract_viewer.py  tesseract_viewer_aio.py
src/tesseract_scene_graph/: tesseract_scene_graph_bindings.cpp
src/tesseract_serialization/: tesseract_serialization_bindings.cpp
src/tesseract_srdf/: tesseract_srdf_bindings.cpp
src/tesseract_state_solver/: tesseract_state_solver_bindings.cpp
src/tesseract_task_composer/: tesseract_task_composer_bindings.cpp
src/tesseract_task_composer_planning/: tesseract_task_composer_planning_bindings.cpp
src/tesseract_time_parameterization/: tesseract_time_parameterization_bindings.cpp
src/tesseract_urdf/: tesseract_urdf_bindings.cpp
src/trajopt_ifopt/: trajopt_ifopt_bindings.cpp
src/trajopt_sqp/: trajopt_sqp_bindings.cpp
tesseract_nanobind/: CMakeLists.txt  environment.yml  pyproject.toml  requirements.txt
tesseract_nanobind/src/: tesseract_nb.h
tesseract_nanobind/tests/: conftest.py  context.py  test_examples.py  test_kinematics_plugin_loading.py
tesseract_viewer_python/examples/: abb_irb2400_viewer.py
tests/: conftest.py  tesseract_support_resource_locator.py  test_clone_methods.py  test_examples.py  test_kinematics_plugin_loading.py  test_ompl_base.py
(+231 files in other folders)
