[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "setuptools-scm >=8"]
build-backend = "scikit_build_core.build"

[project]
name = "tesseract-robotics-nanobind"
description = "Tesseract robotics Python bindings (nanobind)"
readme = "README.md"
# we're keeping 3.9, since that's the python version that Rhino 8 uses
# this is in the interest of supporting the compas.dev community
requires-python = ">=3.9"
# Runtime dependencies - keep in sync with requirements.txt
dependencies = [
    "numpy>=1.21.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "scipy>=1.7.0",  # Required for Eigen sparse matrix conversion in nanobind
    "opencv-contrib-python",  # Required for tesseract_robotics_viewer
    "aiohttp",  # Required for tesseract_robotics_viewer
    "importlib-resources",  # Required for tesseract_robotics_viewer
]

authors = [
    { name = "Jelle Feringa", email = "jelle@terrestrial.construction" },
    { name = "John Wason", email = "wason@wasontech.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    # "Operating System :: macOS",
    # "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    # "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tesseract-robotics/tesseract_nanobind"
Repository = "https://github.com/tesseract-robotics/tesseract_nanobind"

[project.scripts]
tesseract_nanobind_selftest = "tesseract_robotics.selftest:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--tb=short"]
markers = [
    "viewer: Viewer examples (deselect with '-m \"not viewer\"')",
    "planning: Motion planning examples",
    "basic: Basic examples (collision, kinematics, scene_graph)",
    "lowlevel: Low-level API examples",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/tesseract_robotics", "src/tesseract_robotics_viewer"]
cmake.version = ">=3.15"
cmake.build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = "."  # git root is same as package root now

[tool.scikit-build.cmake.define]
CMAKE_POLICY_DEFAULT_CMP0135 = "NEW"

# Note: cibuildwheel is not used because this package requires
# pre-built tesseract C++ libraries. See .github/workflows/wheels.yml
# for the custom CI that builds C++ deps first via colcon.

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["*.pyi"]  # auto-generated stubs have C++ type strings

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # errors, pyflakes, isort, pyupgrade
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
# nanobind extension modules use star imports - ruff can't see into .so files
"src/tesseract_robotics/tesseract_*/__init__.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"

# ============================================================================
# Pixi configuration - replaces conda environment.yml
# ============================================================================

[tool.pixi.workspace]
name = "tesseract_robotics_dev"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.9"

# Build tools
cmake = ">=3.15,<4"
ninja = "*"
make = "*"
pkg-config = "*"

# C++ dependencies - pinned for C++17 compatibility and API stability
eigen = ">=3.3,<3.5"
boost-cpp = ">=1.70,<2"
console_bridge = ">=1.0,<2"
assimp = ">=5.0,<6"
urdfdom = ">=3.0,<5"
octomap = ">=1.9,<2"
orocos-kdl = ">=1.4,<2"
flann = ">=1.9,<2"
jsoncpp = ">=1.9,<2"
yaml-cpp = ">=0.6,<1"
tinyxml2 = ">=10,<11"
bullet-cpp = ">=3.21,<4"
fcl = ">=0.7,<1"
ompl = ">=1.5,<2"
pcl = ">=1.12,<2"
ipopt = ">=3.14,<4"
gtest = ">=1.10,<2"
qpoases = ">=3.2,<4"
taskflow = ">=3.6,<3.8"  # 3.8+ requires C++20
llvm-openmp = ">=14,<20"

# Python build deps
pip = "*"
setuptools = ">=68"
wheel = "*"
scikit-build-core = ">=0.10,<1"
nanobind = ">=1.3.2,<3"
patchelf = "*"

# Dev/test deps
pytest = ">=7.0"
pytest-xdist = ">=3.0"
pytest-benchmark = "*"
ruff = ">=0.8.0"
pre-commit = ">=3.0"

[tool.pixi.pypi-dependencies]
# Note: tesseract-robotics-nanobind NOT here - use `pixi run install` (chains build-cpp -> pip install)
numpy = ">=1.21.0"
loguru = ">=0.7.0"
scipy = ">=1.7.0"  # Required for nanobind Eigen sparse matrix conversion
colcon-common-extensions = "*"
vcstool = "*"

[tool.pixi.tasks]
test = { cmd = "python -m pytest tests -x -q -n auto", depends-on = ["install"] }
lint = "ruff check ."
fmt = "ruff format ."
build-cpp = { cmd = "zsh scripts/build_tesseract_cpp.sh", description = "Build tesseract C++ libs" }
install = { cmd = "pip install -e . --no-build-isolation", depends-on = ["build-cpp"], description = "Install package (editable)" }
build = { depends-on = ["install"], description = "Build C++ libs + install bindings" }

# Python version features for CI matrix builds
[tool.pixi.feature.py39.dependencies]
python = "3.9.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = { solve-group = "default" }
py39 = { features = ["py39"], solve-group = "py39" }
py310 = { features = ["py310"], solve-group = "py310" }
py311 = { features = ["py311"], solve-group = "py311" }
py312 = { features = ["py312"], solve-group = "py312" }
